# speech_tool

./: .gitignore  README.md  client.py  config.yaml  main.py  outeai.py  pyproject.toml  setup.sh  test.py  test_bark.py
docs/source/: conf.py  index.md
docs/source/apidocs/: index.rst
docs/source/apidocs/listening_neuron/: listening_neuron.config.rst  listening_neuron.listening_neuron.rst  listening_neuron.logging_config.rst  listening_neuron.mic.rst  listening_neuron.recording_device.rst  listening_neuron.rst  listening_neuron.transcription.rst
docs/source/apidocs/listening_node/: listening_node.config.rst  listening_node.listening_node.rst  listening_node.logging_config.rst  listening_node.mic.rst  listening_node.recording_device.rst  listening_node.rst  listening_node.transcription.rst
docs/source/apidocs/speech_neuron/: speech_neuron.config.rst  speech_neuron.kokoro_server.rst  speech_neuron.rst
docs/source/apidocs/speech_tool/: speech_tool.config.rst  speech_tool.kokoro_server.rst  speech_tool.rst
speech_neuron/: __init__.py  kokoro_server.py
speech_node/: __init__.py  config.py  kokoro_server.py
