[tool.poetry]
name = "speech_node"
version = "0.0.1"
description = ""
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "3.8.3"
kokoro = "^0.7.9"
soundfile = "^0.13.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
# pedalboard = "^0.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
