[tool.poetry]
name = "speech_node"
version = "0.0.1"
description = ""
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kokoro = "^0.7.9"
soundfile = "^0.13.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pedalboard = "^0.9.16"
sounddevice = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
